# voice-input-mac

./: .gitignore  .swiftlint.yml  Makefile  Murmur.entitlements  Package.swift  README.md  dev.sh  package.json  stop.sh
Scripts/: dev.sh  run-dev-app.sh  stage-dev-app.sh
Sources/App/: DictationCoordinator.swift  DictationPhase.swift  FnKeyMonitor.swift  MurmurApp.swift  PanelController.swift  StatusItemController.swift  VoiceInputShellApp.swift
Sources/Engine/: AudioSession.swift  ColiTranscriber.swift  FinalTranscriptionEngine.swift  LLMPolisher.swift  LiveSpeechRecognizer.swift  TextToSpeechService.swift  VoiceCoreService.swift
Sources/Support/: Accessibility.swift  AppPaths.swift  AppTheme.swift  ConfigManager.swift  DictionaryManager.swift  FlowMetrics.swift  HistoryStore.swift  HotkeyManager.swift  IMEService.swift  KeychainService.swift  LaunchConfigurationValidator.swift  Logger.swift  ModelManager.swift  MurmurError.swift  PromptManager.swift  Protocols.swift  SpeechRuntimeStatus.swift  TextInsertionService.swift
Sources/UI/: CapsulePanel.swift  CapsuleView.swift  DesignTokens.swift  HistoryView.swift  MenuBarController.swift  ModelDownloadView.swift  NoticePanel.swift  (+7 more)
include/: voice_input_core.h
scripts/: build-frontend.mjs  dev-frontend.mjs
src/: app.js  index.html  lib.rs  live_asr.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: asr.rs  audio.rs  clipboard.rs  health.rs  hotkey.rs  lib.rs  settings.rs
voice-core/: Cargo.toml
voice-core/include/: voice_input_core.h
voice-core/src/: audio.rs  lib.rs
(+15 files in other folders)
