[package]
name = "voice-input-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust core for the native Voice Input macOS shell"

[lib]
name = "voice_input_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
